Implement cart functionality with dynamic totals, product updates, and order management